--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 </head>
 <body>
 
-
+    <div id="root">
+        <h1>
+            {{title}}
+        </h1>
+        <input type="text" v-model="title">
+    </div>
     <!-- Script  -->
     <script src="js/script.js" type="text/javascript"></script>
     
