--- a/index.html
+++ b/index.html
@@ -13,10 +13,27 @@
 <body>
 
     <div id="root">
-        <h1>
-            {{title}}
-        </h1>
-        <input type="text" v-model="title">
+        <div>
+            <h1>
+                {{title}}
+            </h1>
+            <input type="text" v-model="title">
+
+        </div>   
+        <hr>
+        <!-- bonus  -->
+        <div>
+            <h2>
+                Prende un immagine in input e la mostra a schermo 
+            </h2>
+            <p> Funziona solo con jumbo.png</p>
+            <input type="text" v-model="pic">
+            <br>
+            <img :src="pic"  width="800"/>
+        </div>
+
+
+        
     </div>
     <!-- Script  -->
     <script src="js/script.js" type="text/javascript"></script>
